# avsync

./: .gitignore  CLION_WINDOWS_SETUP.md  CMakeLists.txt  README.md  WINDOWS_BUILD_QUICKSTART.md  build_windows.sh  imgui.ini  vcpkg.json
.github/workflows/: ci.yml  release.yml
config/: default.json
src/: main.cpp
src/aggregator/: OffsetAggregator.cpp  OffsetAggregator.h
src/common/: Config.cpp  Config.h  Log.h  Types.h
src/corrector/: TimestampCorrector.cpp  TimestampCorrector.h
src/decoder/: MediaDecoder.cpp  MediaDecoder.h
src/detector/: ISyncDetector.h  OnsetAlignDetector.cpp  OnsetAlignDetector.h  SyncDetectorDispatcher.cpp  SyncDetectorDispatcher.h  SyncNetDetector.cpp  SyncNetDetector.h
src/gui/: GuiApp.cpp  GuiApp.h  I18n.h  PlayerCore.cpp  PlayerCore.h  gui_main.cpp
src/pipeline/: SyncPipeline.cpp  SyncPipeline.h
tests/scripts/: generate_test_samples.py  generate_test_samples.sh  run_full_comparison.sh  run_quick_test.sh  run_tests.py  visualize_face_detect.py
tests/unit/: test_config.cpp  test_cross_correlate.cpp  test_median_filter.cpp  test_offset_aggregator.cpp  test_spectral_flux.cpp
